<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="wrap_content"
    android:layout_height="match_parent"
    android:background="@drawable/backgroundwallpaperblue"
    tools:context=".MainActivity">

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="1.0">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="222dp"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/padelPicture"
                android:layout_width="140dp"
                android:layout_height="150dp"
                app:srcCompat="@drawable/padel" />

            <ImageView
                android:id="@+id/gymPicture"
                android:layout_width="143dp"
                android:layout_height="match_parent"
                app:srcCompat="@drawable/gym" />

            <ImageView
                android:id="@+id/swimPicture"
                android:layout_width="178dp"
                android:layout_height="300dp"
                android:layout_weight="1"
                app:srcCompat="@drawable/pool" />
        </LinearLayout>

        <TextView
            android:id="@+id/textViewWelcome"
            android:layout_width="match_parent"
            android:layout_height="86dp"
            android:fontFamily="@font/amiko_semibold"
            android:gravity="center"
            android:text="@string/welcomeMainActivity"
            android:textSize="46sp" />

        <Button
            android:id="@+id/LogInButton"
            android:layout_width="195dp"
            android:layout_height="wrap_content"
            android:background="@drawable/button"
            android:text="@string/buttonLogin"
            android:textColor="#000000"
            android:translationX="115dp"
            android:translationY="40dp"
            app:backgroundTint="#1C68A5"
            app:iconTint="#000000" />

        <Button
            android:id="@+id/createAcountButton"
            android:layout_width="196dp"
            android:layout_height="wrap_content"
            android:background="@drawable/button"
            android:text="@string/buttonCreateAcount"
            android:textColor="#000000"
            android:translationX="115dp"
            android:translationY="85dp"
            app:backgroundTint="#1C68A5" />

        <TextView
            android:id="@+id/textView3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="6dp"
            android:layout_marginTop="6dip"
            android:gravity="center"
            android:paddingLeft="5dp"
            android:paddingRight="5dp"
            android:text="@string/descriptionMainActivity"
            android:textAppearance="@style/TextAppearance.AppCompat.Body1"
            android:textColor="#000000"
            android:textSize="20sp"
            android:textStyle="italic"
            android:translationY="160dp" />

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>