<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/backgroundwallpaperblue"
    tools:context=".LoggedActivity">

    <TextView
        android:id="@+id/textUserWelcome"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="TextView"
        android:textColor="#020202"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.076"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/logOFF"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/textLogOff"
        android:textColor="#EC1111"
        android:textSize="18sp"
        app:layout_constraintBottom_toTopOf="@+id/imageView"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.899"
        app:layout_constraintStart_toEndOf="@+id/textUserWelcome"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0" />

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="357dp"
        android:layout_height="288dp"
        android:layout_marginTop="4dp"
        android:src="@drawable/now"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textUserWelcome" />

    <Button
        android:id="@+id/newAppointment"
        android:layout_width="162dp"
        android:layout_height="46dp"
        android:layout_marginTop="52dp"
        android:background="@drawable/button"
        android:text="@string/buttonCreateApointment"
        android:textColor="#000000"
        android:textSize="16sp"
        app:backgroundTint="#1C68A5"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView" />

    <Button
        android:id="@+id/viewAppointment"
        android:layout_width="162dp"
        android:layout_height="46dp"
        android:layout_marginTop="44dp"
        android:background="@drawable/button"
        android:text="@string/buttonViewApointment"
        android:textColor="#000000"
        android:textSize="16sp"
        app:backgroundTint="#1C68A5"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/newAppointment" />

    <Button
        android:id="@+id/cancelAppointment"
        android:layout_width="162dp"
        android:layout_height="46dp"
        android:layout_marginTop="44dp"
        android:background="@drawable/button"
        android:text="@string/buttonCancelApointment"
        android:textColor="#000000"
        android:textSize="16sp"
        app:backgroundTint="#1C68A5"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/viewAppointment" />

</androidx.constraintlayout.widget.ConstraintLayout>